# easync

./: .gitattributes  .gitignore  Config.hs  Dockerfile  LICENSE  Main.hs  README.md  easync.cabal  easync.cfg  easync.yaml  stack.yaml
Docker/: supervisord.conf
src/: Config.hs  Handlers.hs  Main.hs
