name:          easync
version:       0.0.0
cabal-version: >= 1.8
build-type:    Simple
category:      Web
maintainer:    Dominik Süß
synopsis:      Small file sync application
description:      Small file sync application
license:       MIT
license-file:  LICENSE

executable          easync
    hs-source-dirs: src
    main-is:        Main.hs
    ghc-options:    -Wall -threaded -rtsopts -with-rtsopts=-N
    extensions:     OverloadedStrings
    other-modules:  Config,Handlers
    build-depends:  base   >= 4      && < 5
                  , scotty >= 0.10.0 && < 0.11
                  , transformers
                  , filepath
                  , hedis
                  , http-types
                  , wai-extra
                  , configurator
                  , cmdlib
                  , bytestring
                  , base16-bytestring
                  , wai-app-static >= 3.1
                  , text
                  , cryptohash
                  , bcrypt
